--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </head>
 
 <body class="p-3">
+    <h1 class="header-title">8*8 LCD Custom Pattern Code Generator</h1>
+    <h2 class="header-subtitle">Draw the pattern in the grid below, and paste the code into your Arduino file.</h2>
+
     <div style="margin: auto;" class="grid-display">
-        <h1>8*8 LCD Custom Pattern Code Generator</h1>
-        <h2 style="color: gray;">Draw the pattern in the grid below, and paste the code into your Arduino file.</h2>
 
         <div class="grid" id="grid"></div>
         <button class="btn btn-primary" onclick="clearGrid()">Clear</button>
