--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <pre class="code" id="code"></pre>
 
     </div>
-    <script src="scripts\index.js"></script>
+    <script src="scripts/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 </body>
 
