--- a/index.html
+++ b/index.html
@@ -11,36 +11,37 @@
 </head>
 
 <body class="p-3">
-    <h1 class="header-title">8*8 LCD Custom Pattern Code Generator</h1>
-    <h2 class="header-subtitle">Draw the pattern in the grid below, and paste the code into your Arduino file.</h2>
-
-    <div style="margin: auto;" class="grid-display">
-
-        <div class="grid" id="grid"></div>
-        <button class="btn btn-primary" onclick="clearGrid()">Clear</button>
-        <button class="btn btn-primary" onclick="invertGrid()">Invert</button>
+    <div class="header">
+        <h1 class="title">8*8 LCD Custom Pattern Code Generator</h1>
+        <h2 class="subtitle">Draw the pattern in the grid below, and paste the code into your Arduino file.</h2>
     </div>
 
+    <div class="container">
+        <div style="margin: auto;" class="grid-display">
+            <h2>Grid</h2>
 
-
-
-    <div style="margin: 5px;" class="code-display">
-        <h2>Code</h2>
-        <div style="margin: auto;" class="data-type-select">
-            <div class="btn-group mt-3" role="group" aria-label="Data type" style="margin: 5px;">
-                <input type="radio" class="btn-check" id="binary" name="dataType" value="binary" checked
-                    onclick="updateCode()">
-                <label class="btn btn-outline-primary" for="binary">Binary</label>
-
-                <input type="radio" class="btn-check" id="hex" name="dataType" value="hex" onclick="updateCode()">
-                <label class="btn btn-outline-primary" for="hex">Hex</label>
-            </div>
+            <div class="grid" id="grid"></div>
+            <button class="btn btn-primary" onclick="clearGrid()">Clear</button>
+            <button class="btn btn-primary" onclick="invertGrid()">Invert</button>
         </div>
-        <button class="btn btn-primary" onclick="copyCode()" style="margin: 5px;">Copy Code</button>
+        <div style="margin: 5px;" class="code-display">
+            <h2>Code</h2>
+            <div style="margin: auto;" class="data-type-select">
+                <div class="btn-group mt-3" role="group" aria-label="Data type" style="margin: 5px;">
+                    <input type="radio" class="btn-check" id="binary" name="dataType" value="binary" checked
+                        onclick="updateCode()">
+                    <label class="btn btn-outline-primary" for="binary">Binary</label>
 
-        <div class="message" id="message">Code copied to clipboard!</div>
-        <pre class="code" id="code"></pre>
+                    <input type="radio" class="btn-check" id="hex" name="dataType" value="hex" onclick="updateCode()">
+                    <label class="btn btn-outline-primary" for="hex">Hex</label>
+                </div>
+            </div>
+            <button class="btn btn-primary" onclick="copyCode()" style="margin: 5px;">Copy Code</button>
 
+            <div class="message" id="message">Code copied to clipboard!</div>
+            <pre class="code" id="code"></pre>
+
+        </div>
     </div>
     <script src="scripts/index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
